[gd_scene load_steps=16 format=2]

[ext_resource path="res://assets/Images/PlanoPilotoIntro/Cópia de em_conversa.png" type="Texture" id=1]
[ext_resource path="res://assets/Images/diary/jogo da memória_on.png" type="Texture" id=2]
[ext_resource path="res://assets/Images/PlanoPilotoIntro/5-congresso nacional.png" type="Texture" id=3]
[ext_resource path="res://scenes/AuxScenes/ChatBox.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/Images/Taguatinga/ícone_fala.png" type="Texture" id=5]
[ext_resource path="res://assets/Images/PlanoPilotoIntro/ranieri_profile.png" type="Texture" id=6]
[ext_resource path="res://assets/audio/sound_effects/unlock_ability.mp3" type="AudioStream" id=7]
[ext_resource path="res://assets/Themes/CharacterChoice.tres" type="Theme" id=8]
[ext_resource path="res://scenes/PlanoPiloto/dialogs/Jornalista.gd" type="Script" id=9]
[ext_resource path="res://scenes/AuxScenes/PlayerBackPack.tscn" type="PackedScene" id=10]
[ext_resource path="res://scenes/AuxScenes/Player.tscn" type="PackedScene" id=11]
[ext_resource path="res://scenes/AuxScenes/AudioController.tscn" type="PackedScene" id=12]

[sub_resource type="Animation" id=2]
resource_name = "Zoom1"
tracks/0/type = "value"
tracks/0/path = NodePath("Jornalista:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.397, 0.397 ), Vector2( 0.447, 0.447 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "Zoom2"

[sub_resource type="Animation" id=4]
resource_name = "Popmenssage"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("UnlockedSkill/Skill:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 0.615573, 1 ),
"update": 0,
"values": [ Vector2( 244.364, 458.182 ), Vector2( 249.455, -224 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("UnlockedSkill/Skill:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Fade_Popup/Fade:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0.670588 ) ]
}

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource( 9 )

[node name="Player" parent="." instance=ExtResource( 11 )]

[node name="Congresso" type="Sprite" parent="."]
position = Vector2( 579.841, 375 )
scale = Vector2( 1.2931, 1.2931 )
texture = ExtResource( 3 )

[node name="Jornalista" type="Sprite" parent="."]
position = Vector2( 464, 472 )
scale = Vector2( 0.397, 0.397 )
texture = ExtResource( 1 )

[node name="ChatBox" parent="." instance=ExtResource( 4 )]
margin_left = -92.0
margin_top = 155.0
margin_right = 4.0
margin_bottom = 203.0
chat = "*J*Com toda certeza, essa manifestação não é relacionada ao movimento retornista.  Aqui temos o povo reivindicando o direito de comer, de trabalhar e ter uma moradia decente."
img = [ ExtResource( 5 ), ExtResource( 6 ) ]
cha = [ "J", "R" ]
image_scales = [ Vector2( 0.9, 0.9 ), Vector2( 0.67, 0.68 ) ]
nam = [ "José Miguel", "Ranieri Mazzilli" ]
resize_panel = [ Vector2( 101, 26 ), Vector2( 135, 26 ) ]
chat2 = true

[node name="PlayerBackPack" parent="." instance=ExtResource( 10 )]
visible = false

[node name="CharacterZoom" type="AnimationPlayer" parent="."]
anims/Zoom1 = SubResource( 2 )
anims/Zoom2 = SubResource( 3 )

[node name="MainMusic" parent="." instance=ExtResource( 12 )]

[node name="Fade_Popup" type="Popup" parent="."]
margin_left = 320.0
margin_top = 400.0
margin_right = 360.0
margin_bottom = 440.0

[node name="Fade" type="Panel" parent="Fade_Popup"]
modulate = Color( 1, 1, 1, 0 )
margin_left = -320.0
margin_top = -400.0
margin_right = 705.0
margin_bottom = 179.0

[node name="UnlockedSkill" type="WindowDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -192.0
margin_top = 112.0
margin_right = 304.0
margin_bottom = 275.0
rect_scale = Vector2( 0.785714, 0.785714 )
theme = ExtResource( 8 )

[node name="Label" type="Label" parent="UnlockedSkill"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.627
anchor_bottom = 0.5
margin_left = -237.818
margin_top = -91.1818
margin_right = 185.079
margin_bottom = 91.8182
custom_colors/font_color = Color( 0.196078, 0.282353, 0.376471, 0.670588 )
text = "Parabéns! Foi desbloqueada a Habilidade Memorização."
align = 1
valign = 1
autowrap = true

[node name="Skill" type="Sprite" parent="UnlockedSkill"]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 244.364, 458.182 )
texture = ExtResource( 2 )

[node name="UnlockedSkillAnimation" type="AnimationPlayer" parent="."]
anims/Popmenssage = SubResource( 4 )

[node name="UnlockedSkillAudio" parent="." instance=ExtResource( 12 )]
stream = ExtResource( 7 )
volume_db = -8.0

[connection signal="end_dialog" from="ChatBox" to="." method="_on_ChatBox_end_dialog"]
[connection signal="next_dialog" from="ChatBox" to="." method="_on_ChatBox_next_dialog"]
[connection signal="previous_dialog" from="ChatBox" to="." method="_on_ChatBox_previous_dialog"]
[connection signal="start_chat" from="ChatBox" to="." method="_on_ChatBox_start_chat"]
[connection signal="popup_hide" from="UnlockedSkill" to="." method="_on_UnlockedSkill_popup_hide"]
